<resources>
    <string name="app_name">Sevilla</string>
    <string name="splash_image">Splash Image</string>
    <string name="login_email">Login With Email</string>
    <string name="text_login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="signup_below">SIGN UP FOR NEW ACCOUNT</string>
    <string name="txt_or">Or</string>
    <string name="login_facebook">Login With Facebook</string>
    <string name="login_email_user">Email Address</string>
    <string name="login_password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_name">User Name</string>
    <string name="user_account_type">Account Type</string>
    <string name="btn_signup">Sign Up</string>
    <string name="tv_publicate_new_text">Publish your product</string>
    <string name="tv_edit_product_detail_text">Edit your product</string>
    <string name="tv_category_text">Category</string>
    <string name="tv_category_text_disable">Category Name</string>
    <string name="tv_product_name_text">Product Name</string>
    <string name="tv_contact_support_name_text">User Name</string>
    <string name="tv_contact_support_email_text">User Email</string>
    <string name="tv_contact_support_phone_text">User Phone NO.</string>
    <string name="tv_product_price_text">Product Price</string>
    <string name="tv_product_description_text">Product Description</string>
    <string name="tv_contact_support_query_text">Your Query</string>
    <string name="tv_product_image_path">image path</string>
    <string name="tv_product_image_text">Product Image</string>
    <string name="edt_product_name_hint">Only letters and numbers allowed</string>
    <string name="edt_contact_support_name_hint_text">Enter Your Name</string>
    <string name="edt_contact_support_email_hint_text">Enter Your Email</string>
    <string name="edt_contact_support_phone_hint_text">Enter Your Phone Number</string>
    <string name="edt_product_price_hint">Product Price</string>
    <string name="edt_product_description_hint">Product Description</string>
    <string name="edt_contact_support_query_hint">What can we help with?</string>
    <string name="edt_product_name_allowed_text">0123456789abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="edt_contact_support_allowed_number">+0123456789</string>
    <string name="tv_sbucategory_text">Subcategory</string>
    <string name="tv_sbucategory_text_disable">Subcategory Name</string>
    <string name="tv_order_no_text">Order No. :</string>
    <string name="tv_order_date_text">Order Date :</string>
    <string name="tv_order_date">Order Date</string>
    <string name="tv_order_no">Order Number</string>
    <string name="tv_order_total_price">00</string>
    <string name="tv_order_status">Status</string>
    <string name="tv_order_btn_detail">Detail</string>
    <string name="tv_no_product_found">No Product Found click here for add Product</string>
    <string name="btn_address_continue_payment">Continue to payment</string>
    <string name="btn_update">Update</string>
    <string name="spinner_hint">Buyer</string>
    <string name="text_seller_type">Seller Type</string>
    <string name="toolbar_add_to_cart">Add to cart</string>
    <string name="toolbar_search">Search</string>
    <string name="default_message_content">Write at least %d characters</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="toolbar_image">Logo Image</string>
    <string name="drawer_image_home">Home Image</string>
    <string name="dr_tv_home">Home</string>
    <string name="dr_tv_my_product">My Product</string>
    <string name="dr_tv_home_seller">My Product</string>
    <string name="dr_tv_delivery">Delivery Address</string>
    <string name="toolbar_tv_payment_check">Payment</string>
    <string name="dr_tv_place_seller">Place Seller</string>
    <string name="dr_tv_order_sales_mode">Orders/Sales Mode</string>
    <string name="dr_tv_inventry">Inventory</string>
    <string name="dr_tv_shipment_seller">My Shipment</string>
    <string name="dr_tv_publicate_new">Publicate New</string>
    <string name="dr_tv_edit_profile">Edit Profile</string>
    <string name="dr_tv_message">Messages</string>
    <string name="dr_tv_contact_support">Contact Support</string>
    <string name="dr_tv_about_us">About Us</string>
    <string name="dr_tv_news_event">News Events</string>
    <string name="dr_tv_logout">Logout</string>
    <string name="tv_payment_check_textview">Delivery Address</string>
    <string name="tv_payment_check_delivery_date_textview">Delivery Date</string>
    <string name="tv_payment_check_payment_summary_textview">Payment Summary</string>
    <string name="tv_payment_check_textview_street">Street</string>
    <string name="tv_payment_check_textview_country">Country</string>
    <string name="tv_payment_check_order_total">Order Total</string>
    <string name="tv_payment_check_delivery_charge">Delivery Charge</string>
    <string name="tv_payment_check_total_amount">Total Amount</string>
    <string name="tv_category_one_one">Alimentacion</string>
    <string name="tv_category_one_two">Alojamiento</string>
    <string name="tv_category_two_one">Bellezay estética</string>
    <string name="tv_category_two_two">Comer y beber</string>
    <string name="tv_category_three_one">Motor</string>
    <string name="tv_category_three_two">Establecimientos sanitarios</string>
    <string name="tv_category_four_one">Servicios prefesionales</string>
    <string name="tv_category_four_two">Otros</string>
    <string name="tv_toolbar_subcategory">SubCategory</string>
    <string name="tv_toolbar_inventory_order">Inventory History</string>
    <string name="tv_toolbar_news_event">News/Events</string>
    <string name="tv_toolbar_subcategory_name">SubCategory Name</string>
    <string name="tv_toolbar_single_product_name">Product Detail</string>
    <string name="tv_toolbar_my_cart">My Cart</string>
    <string name="tv_toolbar_order_detail_text">Order Number :</string>
    <string name="tv_toolbar_order_detail_number">Order Number</string>
    <string name="tv_toolbar_address">My Address</string>
    <string name="tv_toolbar_publicate_new">Publicate New</string>
    <string name="tv_toolbar_edit_product">Edit Product Detail</string>
    <string name="tv_toolbar_contact_support">Contact Support</string>
    <string name="tv_toolbar_subcategory_product">SubCategory Product</string>
    <string name="tv_subcategory_product_list_tittle">Product Name</string>
    <string name="tv_news_event_tittle">News/Event Name</string>
    <string name="tv_news_event_date">News/Event Date</string>
    <string name="tv_news_event_description">News/Event Description</string>
    <string name="tv_subcategory_single_product_discription_tittle">Description</string>
    <string name="tv_subcategory_single_product_quantity">Qty:- </string>
    <string name="tv_my_cart_product_quantity">Quantity:</string>
    <string name="tv_my_cart_delivery_time_text">Standard delivery by :</string>
    <string name="tv_my_cart_delivery_time">July 05th, 2017</string>
    <string name="tv_my_cart_delivery_text">Delivery :</string>
    <string name="tv_my_cart_remove_item">REMOVE</string>
    <string name="tv_my_cart_checkout">TOTAL</string>
    <string name="tv_my_cart_checkout_text">Checkout</string>
    <string name="tv_btn_publicate_text">Publicate Now</string>
    <string name="tv_btn_update_text">UPDATE Now</string>
    <string name="tv_btn_contact_support_text">Send</string>
    <string name="tv_my_cart_checkout_bracket_open">(</string>
    <string name="tv_my_cart_checkout_bracket_closed">)</string>
    <string name="tv_subcategory_single_product_add_cart">ADD TO CART</string>
    <string name="tv_single_product_delete">DELETE PRODUCT</string>
    <string name="tv_my_address_confirm">CONFIRM</string>
    <string name="tv_my_address_edit_address">Edit Address</string>
    <string name="tv_subcategory_single_product_quantity_number">00</string>
    <string name="tv_subcategory_product_price">00$</string>
    <string name="tv_my_cart_delivery_charges">00$</string>
    <string name="tv_add_cart_total_items">0</string>
    <string name="tv_my_cart_total_items_price">$ 00</string>
    <string name="tv_patment_check_item_name">Item Name</string>
    <string name="tv_subcategory_single_product_discription">Product Description</string>
    <string name="tv_my_address_user_f_name_text">First Name :</string>
    <string name="tv_my_address_user_l_name_text">Last Name :</string>
    <string name="tv_my_address_user_address_text">Address :</string>
    <string name="tv_my_address_user_country_text">Country :</string>
    <string name="tv_my_address_user_state_text">State :</string>
    <string name="tv_my_address_user_city_text">City :</string>
    <string name="tv_my_address_user_zip_text">Zip Code :</string>
    <string name="tv_my_address_user_phone_text">Phone No. :</string>
    <string name="tv_my_address_user_f_name">First Name</string>
    <string name="tv_my_address_user_l_name">Last Name</string>
    <string name="tv_my_address_user_address">Street Address</string>
    <string name="tv_my_address_user_country">Country</string>
    <string name="tv_my_address_user_state">State</string>
    <string name="tv_my_address_user_city">City</string>
    <string name="tv_my_address_user_zip">Zip Code</string>
    <string name="tv_my_address_user_phone_no">Phone Number</string>
    <string name="tv_my_address_text">Check Your Address</string>
    <string name="user_first_name">User First Name</string>
    <string name="user_last_name">User Last Name</string>
    <string name="user_street_address">User Street Address</string>
    <string name="user_zip_code">Zip</string>
    <string name="dot_country_loading">Country Loading</string>
    <string name="dot_state_loading">State Loading</string>
    <string name="dot_city_loading">City Loading</string>
    <string name="tv_collepsing">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. </string>
    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_condensed">sans-serif-condensed</string>
    <string name="roboto_thin">sans-serif-thin</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="number_picker_formatter">%02d</string>
    <string name="label_send">Send</string>
    <string name="label_error_incorrect_phone">Incorrect phone</string>
</resources>