<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_inventory_history_list_item_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="0dp"
        app:cardElevation="2dp"
        app:cardMaxElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rl_order_no_text"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:id="@+id/tv_order_no_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:text="@string/tv_order_no_text"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_order_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/tv_order_no_text"
                    android:text="@string/tv_order_no"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_order_total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="5dp"
                    android:text="@string/tv_order_total_price"
                    android:textSize="18sp" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_order_date_status"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/rl_order_no_text"
                android:layout_marginTop="1dp">

                <TextView
                    android:id="@+id/tv_oder_date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:text="@string/tv_order_date_text"
                    android:textSize="15sp" />


                <TextView
                    android:id="@+id/tv_oder_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/tv_oder_date_text"
                    android:text="@string/tv_order_date"
                    android:textSize="15sp" />


                <TextView
                    android:id="@+id/tv_oder_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="5dp"
                    android:text="@string/tv_order_status"
                    android:textSize="18sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_order_detail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/rl_order_date_status">

                <android.support.v7.widget.CardView
                    android:id="@+id/cv_order_detail_btn"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="5dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="2dp"
                    app:cardMaxElevation="2dp">

                    <RelativeLayout
                        android:id="@+id/rl_order_detail_btn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/login_email">

                        <TextView
                            android:id="@+id/tv_order_detail_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:gravity="center_vertical"
                            android:text="@string/tv_order_btn_detail"
                            android:textColor="@color/text_color_white"
                            android:textSize="20sp" />

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cv_order_detail_btn_click"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="8dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:visibility="gone"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="2dp"
                    app:cardMaxElevation="2dp">

                    <RelativeLayout
                        android:id="@+id/rl_order_detail_btn_click"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/login_email">

                        <TextView
                            android:id="@+id/tv_order_detail_btn_click"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:gravity="center_vertical"
                            android:text="@string/tv_order_btn_detail"
                            android:textColor="@color/text_color_white"
                            android:textSize="18sp" />

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

            </RelativeLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>